Small fix for simple map release.